# parser_combinator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  makefile
examples/: calc.h
lib/: fakeit.hpp
src/: CMakeLists.txt  main.cpp  parser_combinator.bak  parser_combinator.h  parser_combinator2.h
src/examples/: calc.bak
test/: CMakeLists.txt  test_both.cpp  test_either.cpp  test_parser.cpp  test_primitives.cpp  test_state.cpp  test_util.cpp
